--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
 body {
     margin: 0;
     text-align: center;
-    background-image: url(afbeeldingen/background.png);
+    background-image: url(afbeeldingen/backgroundd.png);
     background-size: cover;
     background-repeat: no-repeat;
     user-select: none;
